# game.libretro.beetle-gba

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: control
depends/common/beetle-gba/: 0001-Fix-need_fullpath-value-in-libretro-API.patch  CMakeLists.txt  beetle-gba.txt
game.libretro.beetle-gba/: addon.xml  addon.xml.in
game.libretro.beetle-gba/resources/: settings.xml
game.libretro.beetle-gba/resources/language/English/: strings.po
game.libretro.beetle-gba/resources/language/resource.language.af_za/: strings.po
game.libretro.beetle-gba/resources/language/resource.language.am_et/: strings.po
game.libretro.beetle-gba/resources/language/resource.language.ar_dz/: strings.po
game.libretro.beetle-gba/resources/language/resource.language.ar_sa/: strings.po
game.libretro.beetle-gba/resources/language/resource.language.ast_es/: strings.po
game.libretro.beetle-gba/resources/language/resource.language.az_az/: strings.po
game.libretro.beetle-gba/resources/language/resource.language.be_by/: strings.po
game.libretro.beetle-gba/resources/language/resource.language.bg_bg/: strings.po
game.libretro.beetle-gba/resources/language/resource.language.bs_ba/: strings.po
game.libretro.beetle-gba/resources/language/resource.language.ca_es/: strings.po
game.libretro.beetle-gba/resources/language/resource.language.cs_cz/: strings.po
game.libretro.beetle-gba/resources/language/resource.language.cy_gb/: strings.po
game.libretro.beetle-gba/resources/language/resource.language.eo/: strings.po
(+78 files in other folders)
